<resources>
    <string name="app_name">PatashalaErp</string>
    <string name="hey_it_s_me">Hey, It\'s not Me</string>
    <string name="staffId">ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="otp_number">Please Enter six digit otp sent to</string>
    <string name="otp_ok">Ok</string>
    <string name="otp_resend_code">Resend</string>
    <string name="otp_not_receive_code">Didn\'t Receive the code</string>
    <string name="msg_complete_your_pin">Please complete your PIN</string>
    <string name="ImageBack">ImageBack</string>
    <string name="Name">Name</string>
    <string name="Employee_ID">Employee ID</string>
    <string name="Applied_Date">Applied Date</string>
    <string name="Applied_Time">Applied Time</string>
    <string name="Leave_Type">Leave Type</string>
    <string name="Status">Status</string>
    <string name="Diksha">Diksha</string>
    <string name="Causal_Leave">Causal Leave</string>
    <string name="Pending">Pending</string>
    <string name="Subject">Subject:</string>
    <string name="Subject_title">Subject title causal leave for 12 days</string>
    <string name="Message">Message</string>
    <string name="Message_text">Hi this is to inform you that my friend is admitted_in_hospital_due_to_car_accident_he_is_in_very_critical_condition_and_i_have_to_visit_him_on_urgent_basis_i_will_not_be_available_for_duty_today</string>
    <string name="Emergency_Contact_Details">Emergency Contact Details</string>
    <string name="Image">Image</string>
    <string name="address">#6/2,Varadhi Smartek Pvt.Ltd,</string>
    <string name="phone_no">+91-9448-926-127</string>
    <string name="Comment">Comment</string>
    <string name="comments">comments</string>
    <string name="Add_Comments">Add Comments</string>
    <string name="Approve">Approve</string>
    <string name="Rejected">Rejected</string>
    <string name="title_activity_leave">LeaveActivity</string>
    <string name="upload_file_here">Upload file here</string>
    <string name="door_no">#Door No</string>
    <string name="street_name">Street Name</string>
    <string name="locality">Locality</string>
    <string name="pincode">Pincode</string>
    <string name="city">City</string>
    <string name="landmark">Landmark</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="leave_inbox">Leave Inbox</string>
    <string name="leaveStatement">Leave Statement</string>
    <string name="zero">0</string>
    <string name="five">5</string>
    <string name="leavesInfo">*Only Causal and Sick Leaves are paid leaves.</string>
    <string name="unCashLeave">Uncash Leave</string>
    <string name="unpaidLeave">Unpaid Leave</string>
    <string name="sickLeave">Sick Leave</string>
    <string name="permissionLeave">Permission Leave</string>
    <string name="causalLeave">Causal Leave</string>
    <string name="nienteen">2019</string>
    <string name="utilized">Utilized</string>
    <string name="total">Total</string>
    <string name="leaveType">Leave Type</string>
    <string name="inbox">Inbox</string>
    <string name="employeeID">Employee ID</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="management">Management</string>
    <string name="staff">Staff</string>
    <string name="parent">Parent</string>
    <string name="welcome_user">Welcome user</string>
    <string name="helloworld">Hello World!</string>
    <string name="module_name">Module Name</string>
    <string name="maker">Maker</string>
    <string name="checker">Checker</string>
    <string name="module">Module</string>
    <string name="account">Account</string>
    <string name="set_default">Set Default</string>
    <string name="select_to_choose_default_login_method">Select to choose default login method</string>
    <string name="finger_print">Finger Print</string>
    <string name="mpin">MPIN</string>
    <string name="backgroung">TODO</string>
    <string name="add_classes">Add Class</string>
    <string name="login_with_fingerprint">Login with Fingerprint</string>
    <string name="touch_sensor">Touch Sensor</string>
    <string name="use_mpin">Use MPIN</string>
    <string name="login_with_mpin">Login with MPIN</string>
    <string name="use_fingerprint">Use Fingerprint</string>
    <string name="forget">Forget</string>
    <string name="reset">Reset</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="c">C</string>
    <string name="_0">0</string>
    <string name="Class">Class</string>
    <string name="sections">Sections</string>
    <string name="add_section">Add Section</string>
    <string name="description">Description</string>
    <string name="add_session">Add Session</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="session_1">Session 1</string>
    <string name="no_of_sessions">No Of Sessions</string>
    <string name="dash">-</string>
    <string name="submit">Submit</string>
    <string name="add_academic_year">Add Academic Year</string>
    <string name="data">data</string>
    <string name="introduction_to_participant">Introduction to Participant</string>
    <string name="add_roles">Add Roles</string>
    <string name="add">Add</string>
    <string name="select_module">Select Module</string>
    <string name="save">Save</string>
    <string name="select_all">Select All</string>
    <string name="next">Next</string>
    <string name="hello_there">Hello there!</string>
    <string name="school_id">School ID</string>
    <string name="it_s_not_my_school">It\'s not my school!</string>
    <string name="checker_and_maker">Checker and Maker</string>
    <string name="makers">Makers</string>
    <string name="modules">Modules</string>
    <string name="checkers">Checkers</string>
    <string name="enter_mobile_no_to_continue">Enter mobile no.to continue</string>
    <string name="reset_mpin">Reset Mpin</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="tick_mark">\u2713</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="user_name">User Name</string>
    <string name="send_otp">Send OTP</string>
    <string name="please_enter_your_registered_mobile_no">please enter your registered mobile no</string>
    <string name="step1">step1</string>
    <string name="step2">step2</string>
    <string name="step3">step3</string>
    <string name="mobile_no">Mobile No</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="user_name_mobile_no">User Name/Mobile No</string>
    <string name="please_type_verification_code">Please enter verification code</string>
    <string name="verify">Verify</string>
    <string name="try_later">Please try again later</string>
    <string name="something_is_wrong">Something is wrong. Please try again later</string>
    <string name="click_to_resend_otp">Click here to resend OTP</string>
    <string name="mobile_not_registered">Your mobile number is not registered</string>
    <string name="authenticating_please_wait">Authenticating, Please wait..</string>
    <string name="oops">OOPs!</string>
    <string name="please_wait">Please Wait..</string>
    <string name="show">Show</string>
    <string name="add_wings">Add Wings</string>
    <string name="wings">Wings</string>
    <string name="alphabetic">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz " "</string>
    <string name="alphanumeric">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890 " "</string>
    <string name="alphanumericp">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890% " "</string>
    <string name="admission_number">Starting admission number*</string>
    <string name="staff_number">Enter staff number*</string>
    <string name="father">Father</string>
    <string name="mother">Mother</string>
    <string name="facility">Facility</string>
    <string name="qualification">Parent Qualification</string>
    <string name="food">Food</string>
    <string name="transport">Transport</string>
    <string name="guardians">Guardians:</string>
    <string name="decrease">-</string>
    <string name="increase">+</string>
    <string name="logo">logo</string>
    <string name="enter_minimum_required_for_admission">Percentage required for admission*</string>
    <string name="father_qualification">Father Qualification</string>
    <string name="facility_provident">Facility Provident</string>
    <string name="mother_qualification">Mother Qualification</string>
    <string name="food_facility">Food Facility</string>
    <string name="transport_facility">Transport Facility</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="barrier">Barrier</string>
    <string name="inValid_username_pass">InValid Username and Password</string>
    <string name="add_division">Add Division</string>
    <string name="notice_board">Notice Board</string>
    <string name="image">TODO</string>
    <string name="event_schedule_list"><![CDATA[Event & Schedule list]]></string>
    <string name="_01_nov_2019">01-Nov-2019</string>
    <string name="complaints_issues"><![CDATA[Complaints & issues]]></string>
    <string name="active_tickets">Active Tickets</string>
    <string name="resolved">Resolved</string>
    <string name="complaints">Complaints</string>
    <string name="statistic_view_by">Statistic view by</string>
    <string name="d">D</string>
    <string name="w">W</string>
    <string name="m">M</string>
    <string name="y">Y</string>
    <string name="voice_icon">voice_icon</string>
    <string name="settings">settings</string>
    <string name="search">Search</string>
    <string name="search_member">search Member</string>
    <string name="birthdays">Birthdays</string>
    <string name="wish_them_to_happy_birthday">Wish Them to Happy Birthday</string>
    <string name="events_amp_schedule"><![CDATA[Events &schedule]]></string>
    <string name="visitor">Visitor</string>
    <string name="sun">sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">sat</string>
    <string name="fees_collection_amp_expenses"><![CDATA[Fees Collection & Expenses]]></string>
    <string name="u20b9_10_000">₹ 10,000</string>
    <string name="collection">Collection</string>
    <string name="galley">Galley</string>
    <string name="graph">Graph</string>
    <string name="total_visitors">Total Visitors</string>
    <string name="_35">35%</string>
    <string name="total_existing">Total Existing</string>
    <string name="_40">40%</string>
    <string name="_20">20%</string>
    <string name="my_child_01">My Child_01</string>
    <string name="_253k">253k</string>
    <string name="today">Today</string>
    <string name="textview">textview</string>
    <string name="_30_000">30,000</string>
    <string name="like_us_on_facebook">Like us on facebook</string>
    <string name="fallow_us_on_twitter">Fallow us on Twitter</string>
    <string name="_20_000">20,000</string>
    <string name="fallow_us_on_google">Fallow us on Google</string>
    <string name="_10_000">10,000</string>
    <string name="a_plus_plus">A++</string>
    <string name="enter_marks">Enter Marks</string>
    <string name="from">From</string>
    <string name="eighty">80</string>
    <string name="to">To</string>
</resources>