<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/barrier_green_colorPrimaryDark"
    >

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/barrier_green_colorPrimaryDark">

        <ImageView
            android:id="@+id/iv_backBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="start"
            android:src="@drawable/ic_arrow_back_white_24dp"
            android:contentDescription="@string/description" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_section"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_17sp" />

        <ImageView
            android:id="@+id/iv_sendAddSubmit"
            style="@style/imgvw_normal"
            android:layout_width="@dimen/dp25"
            android:layout_height="@dimen/dp25"
            android:src="@drawable/ic_send_black_24dp"
            android:layout_gravity="end"
            android:layout_marginRight="@dimen/dp10"
            android:contentDescription="@string/backgroung"
            android:layout_marginEnd="@dimen/dp10" />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        style="@style/Ll_normal_vtl"
        android:layout_height="match_parent"
        android:background="@drawable/card_design">


        <LinearLayout
            style="@style/Ll_normal_htl"
            android:background="@drawable/card_design"
            android:padding="@dimen/dp5">

            <Spinner
                android:id="@+id/spn_division"
                style="@style/spinner_weight"
                android:layout_margin="@dimen/dp5" />

            <Spinner
                android:id="@+id/spn_class"
                style="@style/spinner_weight"
                android:layout_margin="@dimen/dp5" />

        </LinearLayout>

        <!--BUTTON GREEN COLOR-->

        <Button
            android:id="@+id/btn_add"
            style="@style/button_normal"
            android:layout_margin="@dimen/dp10"
            android:layout_gravity="center"
            android:background="@drawable/btn_round_shape_green"
            android:text="@string/add"/>

        <LinearLayout
            style="@style/Ll_normal_htl"
            android:padding="@dimen/dp3"
            android:layout_marginTop="@dimen/dp15"
            android:background="@drawable/account_background_shape">

            <TextView
                style="@style/tv_weight_normal"
                android:layout_gravity="center"
                android:gravity="left"
                android:paddingLeft="@dimen/dp30"
                android:text="@string/Class"
                android:textColor="@color/colorWhite"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <TextView
                style="@style/tv_weight_normal"
                android:layout_gravity="center"
                android:gravity="right"
                android:paddingRight="@dimen/dp30"
                android:text="@string/sections"
                android:textColor="@color/colorWhite"
                tools:ignore="RtlHardcoded,RtlSymmetry" />


        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_class_section"
            style="@style/tv_bothmatch"
            android:layout_marginTop="@dimen/dp5"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="@dimen/dp150"
            android:layout_height="@dimen/dp35"
            android:textColor="@color/white"
            android:layout_margin="@dimen/dp10"
            android:layout_gravity="center"
            android:background="@drawable/btn_round_shape_green"
            android:text="@string/save"/>
    </LinearLayout>



</LinearLayout>